--- a/site.css
+++ b/site.css
@@ -6,17 +6,23 @@ html {
   }
   body {
     /* Margin bottom by footer height */
-    margin-bottom: 60px;
+    padding-bottom: 5em;
+  }
+  .custom-jumbotron{
+    background-color: #dbebfa !important;
   }
   .footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    /* Set the fixed height of the footer here */
-    height: 60px;
-    line-height: 60px; /* Vertically center the text there */
-    background-color: #f5f5f5;
+    line-height: 2em; 
+    background-color: #dbebfa;
   }
+
+ .footer p {
+    text-align: center;
+  }
+
   /* sticky end */
 
 .disabled {
